before token work